# Projeto-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: fragmentshader.glsl
assets/shaders/lighting/: lightingFragment.glsl  lightingVertex.glsl
assets/shaders/skybox/: skyboxFragment.glsl  skyboxVertex.glsl
assets/shaders/texture/: mainShaderFragment.glsl  mainShaderVertex.glsl  textureFragment.glsl  textureVertex.glsl
include/core/: application.h  inputHandler.h  shader.h  window.h
include/dev/: block.h  camera.h  chunk.h  game.h  game_helper.h  glRenderer.h  hash.h  player.h  window.h  world.h
include/dev/helper/: threadPool.h
include/dev/render/: camera.h  renderer.h  shader.h  window.h
include/dev/render/vertex/: voxelVertex.h
include/dev/world/: block.h  chunk.h  lighting.h  world.h  world_gen.h
include/glad/: glad.h
include/helper/: settings.h
include/player/: camera.h
lib/: glfw3.lib
resources/shaders/: mainFragmentShader.glsl
shaders/: fragmentshader.glsl  vertexshader.glsl
src/: application.cpp  block.cpp  chunk.cpp  game.cpp  glRenderer.cpp  glad.c  main.cpp  player.cpp  shader.cpp  window.cpp  world.cpp
src/core/: application.cpp  inputHandler.cpp  shader.cpp  window.cpp
src/helper/: threadPool.cpp
src/player/: camera.cpp
src/render/: camera.cpp  renderer.cpp  shader.cpp  window.cpp
src/world/: chunk.cpp  lighting.cpp  world.cpp  world_gen.cpp
